WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
164176
AX: iOS Voiceover does not announce previously selected value from input type="date" form field
https://bugs.webkit.org/show_bug.cgi?id=164176
Summary
AX: iOS Voiceover does not announce previously selected value from input type...
Nan Wang
Reported
2016-10-29 00:41:43 PDT
The value of the input type="date" form field should be exposed in accessibilityValue. <
rdar://problem://28670121
>
Attachments
patch
(6.89 KB, patch)
2016-10-29 01:03 PDT
,
Nan Wang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2016-10-29 00:41:56 PDT
<
rdar://problem/29014181
>
Nan Wang
Comment 2
2016-10-29 01:03:36 PDT
Created
attachment 293286
[details]
patch
WebKit Commit Bot
Comment 3
2016-10-31 10:21:14 PDT
Comment on
attachment 293286
[details]
patch Clearing flags on attachment: 293286 Committed
r208159
: <
http://trac.webkit.org/changeset/208159
>
WebKit Commit Bot
Comment 4
2016-10-31 10:21:18 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug