Source/WebCore/accessibility/AccessibilityObject.h
@@ -1042,6 +1042,7 @@ public:
 #if PLATFORM(IOS)
     int accessibilityPasswordFieldLength();
     bool hasTouchEventListener() const;
+    bool isInputTypePopupButton() const;
 #endif
     
     // allows for an AccessibilityObject to update its render tree or perform
